@@ -1,4 +1,6 @@
 /*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
@@ -6,18 +8,16 @@
 package es.iti.commons.jext;
 
 
-import org.junit.Test;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import org.junit.Test;
 
 
 public class TestExtensionManager {
 
     private final ExtensionManager extensionManager = new ExtensionManager();
-
 
     @Test
     public void testGetExtension() {
@@ -27,39 +27,35 @@ public class TestExtensionManager {
         ).containsInstanceOf(MyExtensionV2_5.class);
     }
 
-
     @Test
     public void testGetExtensions() {
         // MyExtensionV2_5 has greater priority than MyExtensionV2_6
         List<MyExtensionPointV2_5> extensions = extensionManager
-                .getExtensions(MyExtensionPointV2_5.class).collect(Collectors.toList());
+                .getExtensions(MyExtensionPointV2_5.class).toList();
         assertThat(extensions).hasSize(2);
         assertThat(extensions.get(0)).isInstanceOf(MyExtensionV2_5.class);
         assertThat(extensions.get(1)).isInstanceOf(MyExtensionV2_6.class);
     }
-
 
     @Test
     public void testGetExtensionsSatisfying() {
         List<MyExtensionPointV2_5> extensions = extensionManager.getExtensionsThatSatisfy(
                 MyExtensionPointV2_5.class,
                 extension -> extension.value().endsWith("_6")
-        ).collect(Collectors.toList());
+        ).toList();
         assertThat(extensions).hasSize(1);
         assertThat(extensions.get(0)).isInstanceOf(MyExtensionV2_6.class);
     }
-
 
     @Test
     public void testGetExtensionsSatisfyingMetadata() {
         List<MyExtensionPointV2_5> extensions = extensionManager.getExtensionsThatSatisfyMetadata(
                 MyExtensionPointV2_5.class,
                 extension -> extension.extensionPointVersion().equals("2.6")
-        ).collect(Collectors.toList());
+        ).toList();
         assertThat(extensions).hasSize(1);
         assertThat(extensions.get(0)).isInstanceOf(MyExtensionV2_6.class);
     }
-
 
     @Test
     public void testExtensionPointSingleton() {
@@ -74,7 +70,6 @@ public class TestExtensionManager {
         assertThat(extension3).isSameAs(extension1);
     }
 
-
     @Test
     public void testExtensionPointFresh() {
         ExtensionPointFresh extension1 = extensionManager.getExtension(ExtensionPointFresh.class)
@@ -87,4 +82,5 @@ public class TestExtensionManager {
         assertThat(extension2).isNotSameAs(extension3);
         assertThat(extension3).isNotSameAs(extension1);
     }
+
 }
