@@ -1,4 +1,27 @@
+/*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
 package es.iti.wakamiti.xray;
+
+
+import static es.iti.wakamiti.xray.XrayConfigContributor.XRAY_ENABLED;
+import static org.apache.commons.lang3.StringUtils.isBlank;
+
+import java.net.URL;
+import java.nio.file.Path;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
 
 import es.iti.commons.jext.Extension;
 import es.iti.wakamiti.api.WakamitiException;
@@ -12,28 +35,29 @@ import es.iti.wakamiti.xray.api.XRayApi;
 import es.iti.wakamiti.xray.internal.Mapper;
 import es.iti.wakamiti.xray.internal.Util;
 import es.iti.wakamiti.xray.internal.WakamitiXRayException;
-import es.iti.wakamiti.xray.model.*;
-import org.slf4j.Logger;
+import es.iti.wakamiti.xray.model.JiraIssue;
+import es.iti.wakamiti.xray.model.TestCase;
+import es.iti.wakamiti.xray.model.TestExecution;
+import es.iti.wakamiti.xray.model.TestPlan;
+import es.iti.wakamiti.xray.model.TestSet;
 
-import java.net.URL;
-import java.nio.file.Path;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-import static es.iti.wakamiti.xray.XrayConfigContributor.XRAY_ENABLED;
-import static org.apache.commons.lang3.StringUtils.isBlank;
-
-@Extension(provider = "es.iti.wakamiti", name = "xray-reporter", version = "2.6", priority = 10)
+/**
+ * Synchronizes XRay data with the configured external system.
+ */
+@Extension(
+        provider = "es.iti.wakamiti",
+        name = "xray-reporter",
+        version = "2.13",
+        priority = Extension.NORMAL_PRIORITY * 2
+)
 public class XRaySynchronizer implements EventObserver {
 
     private static final Logger LOGGER = WakamitiLogger.forClass(XRaySynchronizer.class);
 
+    /** Gherkin node type used when one Xray test is generated per feature. */
     public static final String GHERKIN_TYPE_FEATURE = "feature";
+    /** Gherkin node type used when one Xray test is generated per scenario. */
     public static final String GHERKIN_TYPE_SCENARIO = "scenario";
 
     private boolean enabled;
@@ -53,61 +77,165 @@ public class XRaySynchronizer implements EventObserver {
     private XRayApi xRayApi;
     private JiraApi jiraApi;
 
-    public void enabled(boolean enabled) {
+    /**
+     * Enables or disables every synchronization action handled by this observer.
+     *
+     * @param enabled {@code true} to synchronize plans, results and attachments
+     */
+    public void enabled(
+            boolean enabled
+    ) {
         this.enabled = enabled;
     }
 
-    public void xRayBaseURL(URL xRayBaseURL) {
+    /**
+     * Configures the Xray Cloud API endpoint.
+     *
+     * @param xRayBaseURL base URL used for authentication and GraphQL operations
+     */
+    public void xRayBaseURL(
+            URL xRayBaseURL
+    ) {
         this.xRayBaseURL = xRayBaseURL;
     }
 
-    public void jiraBaseURL(URL jiraBaseURL) {
+    /**
+     * Configures the Jira REST API endpoint used for issue updates and attachments.
+     *
+     * @param jiraBaseURL base URL of the Jira instance backing Xray
+     */
+    public void jiraBaseURL(
+            URL jiraBaseURL
+    ) {
         this.jiraBaseURL = jiraBaseURL;
     }
 
-    public void xRayclientId(String clientId) {
+    /**
+     * Configures the client identifier used to authenticate with Xray Cloud.
+     *
+     * @param clientId Xray API client identifier
+     */
+    public void xRayclientId(
+            String clientId
+    ) {
         this.xRayclientId = clientId;
     }
 
-    public void xRayclientSecret(String clientSecret) {
+    /**
+     * Configures the secret paired with the Xray API client identifier.
+     *
+     * @param clientSecret Xray API client secret
+     */
+    public void xRayclientSecret(
+            String clientSecret
+    ) {
         this.xRayclientSecret = clientSecret;
     }
 
-    public void jiraCredentials(String jiraCredentials) {
+    /**
+     * Configures the Base64-encoded credentials used by Jira REST requests.
+     *
+     * @param jiraCredentials encoded Jira credentials without the {@code Basic}
+     *        authentication scheme
+     */
+    public void jiraCredentials(
+            String jiraCredentials
+    ) {
         this.jiraCredentials = jiraCredentials;
     }
 
-    public void project(String project) {
+    /**
+     * Selects the Jira project where missing Xray entities will be created.
+     *
+     * @param project Jira project key
+     */
+    public void project(
+            String project
+    ) {
         this.project = project;
     }
 
-    public void testPlan(TestPlan testPlan) {
+    /**
+     * Selects the test plan that receives synchronized tests and executions.
+     * <p>
+     * Before synchronization, the plan may contain only a Jira summary. It is
+     * replaced with the matching remote plan, or with a newly created one when
+     * creation is enabled.
+     *
+     * @param testPlan local test-plan selector
+     */
+    public void testPlan(
+            TestPlan testPlan
+    ) {
         this.testPlan = testPlan;
     }
 
-    public void testSet(String testSet) {
+    /**
+     * Configures the source-path base removed from generated Xray test-set names.
+     *
+     * @param testSet base path used by the selected plan mapper
+     */
+    public void testSet(
+            String testSet
+    ) {
         this.testSet = testSet;
     }
 
-    public void tag(String tag) {
+    /**
+     * Restricts synchronization to tests carrying a particular Wakamiti identifier
+     * as a Jira label.
+     *
+     * @param tag required label; a blank value includes all generated tests
+     */
+    public void tag(
+            String tag
+    ) {
         this.tag = tag;
     }
 
-    public void createItemsIfAbsent(boolean createItemsIfAbsent) {
+    /**
+     * Controls whether a missing remote test plan may be created automatically.
+     *
+     * @param createItemsIfAbsent {@code true} to create a plan when no plan with the
+     *        configured summary exists
+     */
+    public void createItemsIfAbsent(
+            boolean createItemsIfAbsent
+    ) {
         this.createItemsIfAbsent = createItemsIfAbsent;
     }
 
-    public void testCasePerFeature(boolean testCasePerFeature) {
+    /**
+     * Selects the granularity of generated Xray tests.
+     *
+     * @param testCasePerFeature {@code true} to generate one test per feature;
+     *        {@code false} to generate one test per scenario
+     */
+    public void testCasePerFeature(
+            boolean testCasePerFeature
+    ) {
         this.testCasePerFeature = testCasePerFeature;
     }
 
-    public void attachments(Set<String> attachments) {
+    /**
+     * Adds path globs that identify report files to attach to the Jira test
+     * execution after they are written.
+     *
+     * @param attachments glob patterns evaluated against report output paths
+     */
+    public void attachments(
+            Set<String> attachments
+    ) {
         this.attachments.addAll(attachments);
     }
 
     @Override
-    public void eventReceived(Event event) {
-        if (!enabled) return;
+    public void eventReceived(
+            Event event
+    ) {
+        if (!enabled) {
+            return;
+        }
 
         initializeXRayApi();
         initializeJiraApi();
@@ -116,10 +244,9 @@ public class XRaySynchronizer implements EventObserver {
             try {
                 LOGGER.info("Sync plan to XRay...");
                 sync((PlanNodeSnapshot) event.data());
-
             } catch (Exception e) {
-                throw new WakamitiException("The test plan could not be synchronized. " +
-                        "You can disable the plugin with the '{}' option to continue.", XRAY_ENABLED, e);
+                throw new WakamitiException("The test plan could not be synchronized. "
+                        + "You can disable the plugin with the '{}' option to continue.", XRAY_ENABLED, e);
             }
         }
 
@@ -156,11 +283,15 @@ public class XRaySynchronizer implements EventObserver {
     }
 
     @Override
-    public boolean acceptType(String eventType) {
+    public boolean acceptType(
+            String eventType
+    ) {
         return List.of(Event.PLAN_RUN_STARTED, Event.PLAN_RUN_FINISHED, Event.REPORT_OUTPUT_FILE_WRITTEN).contains(eventType);
     }
 
-    private void sync(PlanNodeSnapshot plan) {
+    private void sync(
+            PlanNodeSnapshot plan
+    ) {
         createTestPlan();
 
         List<TestCase> tests = getTests(plan);
@@ -178,16 +309,26 @@ public class XRaySynchronizer implements EventObserver {
 
     private void createTestExecution() {
         List<String> createdIssuesId = testPlan.getTestCases().stream().map(TestCase::getIssueId).collect(Collectors.toList());
-        TestExecution testExecution = xRayApi.createTestExecution("Test Execution ".concat(LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss"))), createdIssuesId, project);
+        TestExecution testExecution = xRayApi.createTestExecution(
+                "Test Execution ".concat(
+                        LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss"))
+                ),
+                createdIssuesId,
+                project
+        );
         testPlan.testExecution(testExecution);
         xRayApi.addTestExecutionsToTestPlan(testExecution.getIssueId(), testPlan);
     }
 
-    private void createNewTests(List<TestCase> tests, List<Pair<TestCase, TestCase>> modTests, List<TestSet> remoteTestSets) {
+    private void createNewTests(
+            List<TestCase> tests,
+            List<Pair<TestCase, TestCase>> modTests,
+            List<TestSet> remoteTestSets
+    ) {
         List<String> remoteTestsSummaries = testPlan.getTestCases().stream()
                 .map(TestCase::getJira).map(JiraIssue::getSummary)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         List<TestCase> newTests = tests.stream().filter(t ->
                         !remoteTestsSummaries.contains(t.getJira().getSummary())
@@ -203,11 +344,12 @@ public class XRaySynchronizer implements EventObserver {
             xRayApi.addTestsToSets(createdIssues, remoteTestSets);
 
             LOGGER.debug("{} remote test cases created", newTests.size());
-
         }
     }
 
-    private List<Pair<TestCase, TestCase>> updateModifiedTests(List<TestCase> tests) {
+    private List<Pair<TestCase, TestCase>> updateModifiedTests(
+            List<TestCase> tests
+    ) {
         List<Pair<TestCase, TestCase>> modTests = testPlan.getTestCases().stream()
                 .filter(t -> tests.stream().anyMatch(c -> t.hasSameLabels(c) && t.isDifferent(c)))
                 .map(t -> new Pair<>(t, tests.stream()
@@ -223,7 +365,9 @@ public class XRaySynchronizer implements EventObserver {
         return modTests;
     }
 
-    private void getRemoteTests(List<TestSet> remoteTestSets) {
+    private void getRemoteTests(
+            List<TestSet> remoteTestSets
+    ) {
         List<TestCase> remoteTests = remoteTestSets.stream().parallel()
                 .map(TestSet::getTestCases)
                 .flatMap(List::stream)
@@ -235,7 +379,9 @@ public class XRaySynchronizer implements EventObserver {
         testPlan.testCases(remoteTests);
     }
 
-    private List<TestCase> getTests(PlanNodeSnapshot plan) {
+    private List<TestCase> getTests(
+            PlanNodeSnapshot plan
+    ) {
         String gherkinType = testCasePerFeature ? GHERKIN_TYPE_FEATURE : GHERKIN_TYPE_SCENARIO;
         Mapper mapper = Mapper.ofType(gherkinType).instance(testSet);
 
@@ -244,10 +390,12 @@ public class XRaySynchronizer implements EventObserver {
                 .collect(Collectors.toList());
     }
 
-    private List<TestSet> createTestSets(List<TestCase> tests) {
-        List<TestSet> testSets = tests.stream().map(TestCase::getTestSetList).flatMap(List::stream).collect(Collectors.toList());
+    private List<TestSet> createTestSets(
+            List<TestCase> tests
+    ) {
+        List<TestSet> testSets = tests.stream().map(TestCase::getTestSetList).flatMap(List::stream).toList();
         List<TestSet> remoteTestSets = xRayApi.getTestSets();
-        List<String> remoteTestSetsSummary = remoteTestSets.stream().map(TestSet::getJira).map(JiraIssue::getSummary).collect(Collectors.toList());
+        List<String> remoteTestSetsSummary = remoteTestSets.stream().map(TestSet::getJira).map(JiraIssue::getSummary).toList();
         List<TestSet> newTestSets = testSets.stream()
                 .filter(s -> !remoteTestSetsSummary.contains(s.getJira().getSummary()))
                 .filter(Util.distinctByKey(xRayTestSet -> xRayTestSet.getJira().getSummary()))
@@ -261,21 +409,31 @@ public class XRaySynchronizer implements EventObserver {
     }
 
     private void createTestPlan() {
-        testPlan = xRayApi.getTestPlans().stream().filter(tp -> this.testPlan.getJira().getSummary().equals(tp.getJira().getSummary())).findFirst()
+        String testPlanSummary = Optional.ofNullable(testPlan)
+                .map(TestPlan::getJira)
+                .map(JiraIssue::getSummary)
+                .orElseThrow(() -> new WakamitiXRayException(
+                        "No test plan summary configured for XRay synchronization."));
+
+        testPlan = xRayApi.getTestPlans().stream()
+                .filter(tp -> testPlanSummary.equals(Optional.ofNullable(tp.getJira()).map(JiraIssue::getSummary).orElse(null)))
+                .findFirst()
                 .orElseGet(() -> {
                     if (createItemsIfAbsent) {
-                        return xRayApi.createTestPlan(testPlan.getJira().getSummary());
+                        return xRayApi.createTestPlan(testPlanSummary);
                     } else {
                         throw new WakamitiXRayException(
                                 "Test Plan with name '{}' does not exist in XRay. ",
-                                testPlan.getJira().getSummary());
+                                testPlanSummary);
                     }
                 });
 
         LOGGER.debug("Remote plan #{} ready to sync", testPlan.getIssueId());
     }
 
-    private void updateResults(PlanNodeSnapshot data) {
+    private void updateResults(
+            PlanNodeSnapshot data
+    ) {
         data.getChildren().forEach(child ->
                 child.getChildren().forEach(results ->
                         testPlan.getTestCases().stream()
@@ -287,8 +445,9 @@ public class XRaySynchronizer implements EventObserver {
         xRayApi.updateTestRunStatus(testPlan.getTestCases());
     }
 
-
-    private void uploadAttachment(Path data) {
+    private void uploadAttachment(
+            Path data
+    ) {
         jiraApi.addAttachment(testPlan.getTestExecution().getJira().getKey(), data);
     }
 
