@@ -1,4 +1,6 @@
 /*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
@@ -6,81 +8,87 @@
 package es.iti.wakamiti.api.imconfig.internal;
 
 
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Properties;
+import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import org.apache.commons.configuration2.BaseConfiguration;
+
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.type.TypeFactory;
 import es.iti.wakamiti.api.imconfig.Configuration;
-import es.iti.wakamiti.api.imconfig.ConfigurationFactory;
 import es.iti.wakamiti.api.imconfig.PropertyDefinition;
-import org.apache.commons.configuration2.BaseConfiguration;
-import org.apache.commons.configuration2.convert.DefaultListDelimiterHandler;
-
-import java.util.*;
-import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 
+/**
+ * Provides the Apache Configuration2 functionality used by Wakamiti.
+ */
 public class ApacheConfiguration2 extends AbstractConfiguration {
 
     protected final org.apache.commons.configuration2.Configuration conf;
-    private final Map<Class<?>, BiFunction<String, JavaType[], ?>> CONVERTER = Map.of(
-            List.class, (key, ct) -> getList(key, rawTypes(ct, 1)[0]),
-            Set.class, (key, ct) -> getSet(key, rawTypes(ct, 1)[0]),
-            Stream.class, (key, ct) -> getStream(key, rawTypes(ct, 1)[0]),
-            Map.class, (key, ct) -> {
-                Class<?>[] types = rawTypes(ct, 2);
-                return inner(key).asMap().entrySet().stream()
-                        .collect(Collectors.toMap(
-                                e -> convert(e.getKey(), types[0]),
-                                e -> convert(e.getValue(), types[1]))
-                        );
-            }
-    );
+    private final ApacheConfiguration2Factory configurationFactory;
 
     protected ApacheConfiguration2(
-            ConfigurationFactory builder,
+            ApacheConfiguration2Factory builder,
             Map<String, PropertyDefinition> definitions,
             org.apache.commons.configuration2.Configuration conf
     ) {
         super(builder, definitions);
+        this.configurationFactory = builder;
         this.conf = conf;
     }
 
     protected ApacheConfiguration2(
-            ConfigurationFactory builder,
+            ApacheConfiguration2Factory builder,
             org.apache.commons.configuration2.Configuration conf
     ) {
-        super(builder, Map.of());
-        this.conf = conf;
+        this(builder, Map.of(), conf);
     }
 
     @Override
-    public Configuration withPrefix(String keyPrefix) {
-        BaseConfiguration innerConf = prepare(new BaseConfiguration());
+    public Configuration withPrefix(
+            String keyPrefix
+    ) {
+        BaseConfiguration innerConf = prepare(configurationFactory.newBaseConfiguration());
         conf.getKeys().forEachRemaining(key -> innerConf.addProperty(keyPrefix + "." + key, conf.getProperty(key)));
-        return new ApacheConfiguration2(builder, definitions, innerConf);
+        return new ApacheConfiguration2(configurationFactory, definitions, innerConf);
     }
 
     @Override
-    public Configuration filtered(String keyPrefix) {
-        BaseConfiguration innerConf = prepare(new BaseConfiguration());
+    public Configuration filtered(
+            String keyPrefix
+    ) {
+        BaseConfiguration innerConf = prepare(configurationFactory.newBaseConfiguration());
         conf.getKeys(keyPrefix).forEachRemaining(key -> {
             if (key.startsWith(keyPrefix)) {
                 innerConf.addProperty(key, conf.getProperty(key));
             }
         });
-        return new ApacheConfiguration2(builder, definitions, innerConf);
+        return new ApacheConfiguration2(configurationFactory, definitions, innerConf);
     }
 
     @Override
-    public Configuration inner(String keyPrefix) {
+    public Configuration inner(
+            String keyPrefix
+    ) {
         if (keyPrefix == null || keyPrefix.isEmpty()) {
             return this;
         }
-        return new ApacheConfiguration2(builder, definitions, conf.subset(keyPrefix));
+        var subset = conf.subset(keyPrefix);
+        if (subset instanceof org.apache.commons.configuration2.AbstractConfiguration configuration) {
+            prepare(configuration);
+        }
+        return new ApacheConfiguration2(configurationFactory, definitions, subset);
     }
 
     @Override
@@ -89,7 +97,9 @@ public class ApacheConfiguration2 extends AbstractConfiguration {
     }
 
     @Override
-    public boolean hasProperty(String key) {
+    public boolean hasProperty(
+            String key
+    ) {
         return conf.containsKey(key);
     }
 
@@ -115,58 +125,83 @@ public class ApacheConfiguration2 extends AbstractConfiguration {
     }
 
     @Override
-    public <T> Optional<T> get(String key, Class<T> type) {
+    public <T> Optional<T> get(
+            String key,
+            Class<T> type
+    ) {
         var definition = definitions.get(key);
-        String raw = conf.getString(key);
-        boolean empty = (raw == null || raw.isEmpty());
-        if (definition != null) {
-            var value = empty ? definition.defaultValue().orElse(null) : raw;
-            if (value != null) {
-                return Optional.of(convert(value, type));
-            } else {
-                return Optional.empty();
-            }
-        } else {
-            return Optional.ofNullable(empty ? null : conf.get(type, key));
+        if (isMissingOrEmpty(key)) {
+            return definition == null
+                    ? Optional.empty()
+                    : definition.defaultValue().map(value -> convert(value, type));
         }
+        return Optional.ofNullable(conf.get(type, key, null));
     }
 
     @Override
     @SuppressWarnings("unchecked")
-    public <T> Optional<T> get(String key, TypeReference<T> type) {
+    public <T> Optional<T> get(
+            String key,
+            TypeReference<T> type
+    ) {
         JavaType jt = TypeFactory.defaultInstance().constructType(type.getType());
-        JavaType[] containedTypes = IntStream.range(0, jt.containedTypeCount())
-                .mapToObj(jt::containedType)
-                .toArray(JavaType[]::new);
-        return (Optional<T>) Optional.ofNullable(CONVERTER.getOrDefault(jt.getRawClass(),
-                        (k, ct) -> get(k, jt.getRawClass()).orElse(null)))
-                .map(f -> f.apply(key, containedTypes));
-    }
-
-    private Class<?>[] rawTypes(JavaType[] jt, int length) {
-        Class<?>[] types = new Class[length];
-        for (int i = 0; i < length; i++) {
-            try {
-                types[i] = jt[i].getRawClass();
-            } catch (ArrayIndexOutOfBoundsException e) {
-                types[i] = String.class;
-            }
+        Class<?> rawType = jt.getRawClass();
+        if (Map.class.isAssignableFrom(rawType)) {
+            Class<?> keyType = containedRawType(jt, 0);
+            Class<?> valueType = containedRawType(jt, 1);
+            return (Optional<T>) Optional.of(inner(key).asMap().entrySet().stream()
+                    .collect(Collectors.toMap(
+                            entry -> convert(entry.getKey(), keyType),
+                            entry -> convert(entry.getValue(), valueType),
+                            (first, ignored) -> first,
+                            LinkedHashMap::new
+                    )));
         }
-        return types;
+        if (!jt.hasGenericTypes()) {
+            return get(key, (Class<T>) rawType);
+        }
+        Class<?> elementType = containedRawType(jt, 0);
+        if (List.class.isAssignableFrom(rawType)) {
+            return (Optional<T>) Optional.of(getList(key, elementType));
+        }
+        if (Set.class.isAssignableFrom(rawType)) {
+            return (Optional<T>) Optional.of(getSet(key, elementType));
+        }
+        if (Stream.class.isAssignableFrom(rawType)) {
+            return (Optional<T>) Optional.of(getStream(key, elementType));
+        }
+        return get(key, (Class<T>) rawType);
+    }
+
+    private Class<?> containedRawType(
+            JavaType type,
+            int index
+    ) {
+        JavaType containedType = type.containedType(index);
+        return containedType == null ? String.class : containedType.getRawClass();
     }
 
     @Override
-    public <T> List<T> getList(String key, Class<T> type) {
-        return Optional.ofNullable(conf.getList(type, key)).orElse(Collections.emptyList());
+    public <T> List<T> getList(
+            String key,
+            Class<T> type
+    ) {
+        return conf.getList(type, key, List.of());
     }
 
     @Override
-    public <T> Set<T> getSet(String key, Class<T> type) {
+    public <T> Set<T> getSet(
+            String key,
+            Class<T> type
+    ) {
         return new HashSet<>(getList(key, type));
     }
 
     @Override
-    public <T> Stream<T> getStream(String key, Class<T> type) {
+    public <T> Stream<T> getStream(
+            String key,
+            Class<T> type
+    ) {
         return getList(key, type).stream();
     }
 
@@ -188,12 +223,12 @@ public class ApacheConfiguration2 extends AbstractConfiguration {
     public String toString() {
         StringBuilder string = new StringBuilder("configuration:\n---------------\n");
         conf.getKeys().forEachRemaining(key -> {
-            final String[] values = conf.getStringArray(key);
+            final List<String> values = getList(key, String.class);
             String value = "<undefined>";
-            if (values.length == 1) {
-                value = values[0];
-            } else if (values.length > 1) {
-                value = Arrays.toString(values);
+            if (values.size() == 1) {
+                value = values.get(0);
+            } else if (!values.isEmpty()) {
+                value = values.toString();
             }
             string
                     .append(key)
@@ -205,20 +240,34 @@ public class ApacheConfiguration2 extends AbstractConfiguration {
     }
 
     @Override
-    public void forEach(BiConsumer<String, String> consumer) {
-        conf.getKeys().forEachRemaining(key -> consumer.accept(key, conf.get(String.class, key)));
+    public void forEach(
+            BiConsumer<String, String> consumer
+    ) {
+        conf.getKeys().forEachRemaining(key -> consumer.accept(key, get(key, String.class).orElse(null)));
     }
 
-    private <T> T convert(String raw, Class<T> type) {
-        var abstractConf = (org.apache.commons.configuration2.AbstractConfiguration) conf;
-        return abstractConf.getConversionHandler().to(raw, type, abstractConf.getInterpolator());
+    private boolean isMissingOrEmpty(
+            String key
+    ) {
+        Object raw = conf.getProperty(key);
+        return raw == null || raw instanceof String value && value.isEmpty();
     }
 
-    private <T extends org.apache.commons.configuration2.AbstractConfiguration> T prepare(T abstractConfiguration) {
-        if (builder.hasMultiValueSeparator()) {
-            abstractConfiguration.setListDelimiterHandler(new DefaultListDelimiterHandler(builder.multiValueSeparator()));
-        }
-        return abstractConfiguration;
+    private <T> T convert(
+            Object raw,
+            Class<T> type
+    ) {
+        var configuration = (org.apache.commons.configuration2.AbstractConfiguration) conf;
+        return configuration.getConversionHandler().to(raw, type, configuration.getInterpolator());
+    }
+
+    private <T extends org.apache.commons.configuration2.AbstractConfiguration> T prepare(
+            T configuration
+    ) {
+        var current = (org.apache.commons.configuration2.AbstractConfiguration) conf;
+        configuration.setConversionHandler(current.getConversionHandler());
+        configuration.setListDelimiterHandler(current.getListDelimiterHandler());
+        return configuration;
     }
 
 }
