@@ -1,4 +1,6 @@
 /*
+ * Copyright (c) 2022-2026 Instituto Tecnológico de Informática (ITI)
+ *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/.
@@ -6,29 +8,37 @@
 package es.iti.wakamiti.api.util;
 
 
+import static org.apache.commons.text.StringEscapeUtils.escapeEcmaScript;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
-import static org.apache.commons.text.StringEscapeUtils.escapeEcmaScript;
 
 
-public class StringUtils {
+/**
+ * Utility methods for working with String Utils.
+ */
+public final class StringUtils {
+
+    private StringUtils() {
+    }
 
     /**
      * Replaces the text values, formatted {@code {parameter}}, from the parameter map values.
      *
-     * @param message The string message
+     * @param message    The string message
      * @param parameters The parameters
      * @return The formatted text
      * @throws NoSuchFieldException If a parameter is not in the parameters map
      */
-    public static String format(String message, Map<String, ?> parameters) throws NoSuchFieldException {
+    public static String format(
+            String message,
+            Map<String, ?> parameters
+    ) throws NoSuchFieldException {
         Pattern pattern = Pattern.compile("\\{(\\w+?)}");
         List<String> missing = pattern.matcher(message).results().map(r -> r.group(1)).distinct()
-                .filter(r -> !parameters.containsKey(r)).collect(Collectors.toList());
+                .filter(r -> !parameters.containsKey(r)).toList();
         if (!missing.isEmpty()) {
             throw new NoSuchFieldException("Missing parameters " + missing);
         }
@@ -39,10 +49,13 @@ public class StringUtils {
      * Replaces the text values, formatted {@code {}}, from the object array.
      *
      * @param message The string message
-     * @param args The object array
+     * @param args    The object array
      * @return The formatted text
      */
-    public static String format(String message, Object... args) {
+    public static String format(
+            String message,
+            Object... args
+    ) {
         StringBuilder s = new StringBuilder(message);
         for (Object arg : args) {
             int pos = s.indexOf("{}");
@@ -53,4 +66,5 @@ public class StringUtils {
         }
         return s.toString();
     }
+
 }
